# docker-templates

./: README.md
api_demo_project/: .dockerignore  Dockerfile  compose.yaml  compose_health.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt
builder_to_host/: Dockerfile  requirements.txt
bundle_git/: Dockerfile  README.md  compose.yaml
git_inside_docker/: Dockerfile  compose.yaml
jupyterlab/simple/: Dockerfile  README.md  compose.yaml  pyproject.toml
jupyterlab/simple/.jupyter/: jupyter_lab_config.py
jupyterlab/simple/.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: completion.jupyterlab-settings
jupyterlab/with_django/: README.md  compose.yaml  jupyterlab.Dockerfile
jupyterlab/with_django/.jupyter/: jupyter_lab_config.py
jupyterlab/with_django/DjangoExample/: pyproject.toml  requirements.txt
jupyterlab/with_django/DjangoExample/demo/: apps.py  models.py  views.py
jupyterlab/with_django/DjangoExample/demo/migrations/: 0001_initial.py
jupyterlab/with_django/DjangoExample/project/: settings.py  urls.py
jupyterlab/with_jupyterhub/: README.md  compose.yaml  jupyterlab.Dockerfile
jupyterlab/with_jupyterhub/.jupyterlab/hub/: jupyterhub_config.py
minio/: compose.yaml
minio/ssl/: README.md  compose.yaml  make_cert.sh  nginx_minio.conf
mongo/: README.md
mongo/ReplicaSet/: compose.yaml
mongo/ReplicaSet_1node/: compose.yaml
mongo/ReplicaSet_1node_internal/: compose.yaml
mongo/ReplicaSet_3nodes/: compose.yaml
mongo/Standalone/: compose.yaml
mongo/Standalone_internal/: compose.yaml
mysql/: compose.yaml
mysql/mysql_init/: init.sql
network/: README.md
network/project1/: compose.yaml
network/project2/: Dockerfile  compose.yaml  testnet.py
nginx/: README.md  compose.yaml
nginx/templates/: default.conf.template
nginx/web_front/: Dockerfile  compose.yaml
nginx/web_front/nginx_templates/: default.conf.template
nginx/通用/templates/: default.conf.template
pause/: Dockerfile  compose.yaml
postgres/: compose.yaml  postgresql.conf
postgres/pg_init/: init.sql
postgresql/: compose.yaml  pg-hba.md  postgresql.conf
redis/: compose.yaml  redis.conf
rust_project/: Dockerfile  compose.yaml
ssl_cert/: make_cert.sh  openssl.cnf
(+5 files in other folders)
