[tool.poetry]
name = "djangoexample"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1"
gunicorn = "^23.0.0"
psycopg = {extras = ["binary","pool"], version = "^3.2.1"}
djangorestframework = "^3.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
