[project]
name = "llm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "yarl>=1.22.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 120