[tool.poetry]
name = "djangoexample"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "~4.2.8"
psycopg = { extras = ["pool", "binary"], version = "^3.1.17" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
